Bug fixes
Fixed a bug where text view overflowed into header & bug where view had
empty space when set to bigger line view than lines in text.

--- a/source/style.css
+++ b/source/style.css
@@ -171,6 +171,7 @@ header {
 }
 
 .box {
+	margin-top: 80px;
 	width: 100%;
 	height: 100%;
 	display: flex;
@@ -289,23 +290,16 @@ header {
 		opacity: 0;
 	}
 
-	.view {
-		max-height: 70vh;
+	.box {
+		margin-top: 0px;
 	}
 }
 
-@media only screen and (max-height: 500px) {
+@media only screen and (max-height: 540px) {
 	.view {
-		max-height: 40vh !important;
+		height: 64vh;
 	}
 }
-
-@media only screen and (max-height: 700px) {
-	.view {
-		max-height: 50vh;
-	}
-}
-
 
 @keyframes blink {
   0% { opacity: 1 }
